--- a/css/css.css
+++ b/css/css.css
@@ -2,6 +2,13 @@ root{
 
 }
 
+body{
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 100%;
+}
+
 #main-container{
     width: 100%;
 
@@ -19,7 +26,15 @@ root{
     font-size: 30px;
 }
 
+#userViewWrapper{
+    position: absolute;
+    top: 0;
+    background-color: white;
+    color: black;
 
+    width: 100%;
+    height: 100%;
+}
 
 
 
@@ -30,16 +45,74 @@ root{
 }
 
 
+.modalBackground{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
 
+}
 
 
 /*modal*/
-
-.modal{
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    margin: auto;
+#modalWrapper{
+    position: fixed;
+    left: 50%;
     width: 800px;
-    height: 800px;
+    min-height: 500px;
+}
+
+
+#modal{
+    position: absolute; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    width: 100%;
+
+
+    left: -50%;
+    border-radius: 10px;
+    padding: 10px;
     background-color: whitesmoke;
+    color: black;
+}
+
+#modalMainArea{
+
+}
+
+#modalMainArea > table{
+    width: 80%;
+    margin: auto;
+    border-collapse: collapse;
+    border: 1px solid black;
+    height: 500px;
+    overflow: scroll;
+}
+
+#modalMainArea > table > thead{
+    border: 1px solid black;
+    background-color: green;
+}
+
+#modalMainArea > table > tbody{
+
+    text-align: center;
+}
+
+#modalMainArea > table > tbody > tr:nth-child(odd){
+    background-color: #c3c3c3;
+}
+
+#modalMainArea > table > tbody > tr > td {
+    border: 1px solid black;
+    padding: 2px;
+}
+
+#exitModal_Btn{
+    width: 80%;
+    height: 50px;
+    margin: 20px auto;
+    display: block;
 }
