--- a/css/css.css
+++ b/css/css.css
@@ -82,19 +82,19 @@ body{
 #modalMainArea{
 
 }
-
+/*-------------------table-------------------*/
 #modalMainArea > table{
     width: 80%;
     margin: auto;
     border-collapse: collapse;
     border: 1px solid black;
-    height: 500px;
     overflow: scroll;
 }
 
 #modalMainArea > table > thead{
     border: 1px solid black;
-    background-color: green;
+    background-color: #0000e1;
+    color: white;
 }
 
 #modalMainArea > table > tbody{
