--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,8 @@
+/*-------------------Setting Vars-------------------*/
 root{
 
 }
+
 
 body{
     background-color: black;
@@ -8,7 +10,7 @@ body{
     width: 100%;
     height: 100%;
 }
-
+/*-------------------Main Container-------------------*/
 #main-container{
     width: 100%;
 
@@ -36,7 +38,7 @@ body{
 }
 
 
-
+/*-------------------User View-------------------*/
 #userViewWrapper{
     position: absolute;
     top: 0;
@@ -71,13 +73,13 @@ body{
 
 
 
-
-
+/*-------------------Hidden class -------------------*/
+/*-------------------Everything uses this-------------------*/
 .hidden{
     display: none;
 }
 
-
+/*-------------------Modal-------------------*/
 .modalBackground{
     position: fixed;
     top: 0;
